# frankie_planner

./: .gitignore  .gitmodules  README.md  bookshelf_results.csv  enviroment.yaml  pixi.toml  pyproject.toml  setup.py
data/bookshelf_cage/: bookshelf_cage_0000.json  bookshelf_cage_0001.json  bookshelf_cage_0002.json  bookshelf_cage_0003.json  bookshelf_cage_0004.json  bookshelf_cage_0005.json  bookshelf_cage_0006.json  bookshelf_cage_0007.json  bookshelf_cage_0008.json  bookshelf_cage_0009.json  bookshelf_cage_0010.json  bookshelf_cage_0011.json  bookshelf_cage_0012.json  bookshelf_cage_0013.json  bookshelf_cage_0014.json  bookshelf_cage_0015.json  bookshelf_cage_0016.json  bookshelf_cage_0017.json  bookshelf_cage_0018.json  bookshelf_cage_0019.json  bookshelf_cage_0020.json  bookshelf_cage_0021.json  bookshelf_cage_0022.json  bookshelf_cage_0023.json  bookshelf_cage_0024.json  bookshelf_cage_0025.json  bookshelf_cage_0026.json  bookshelf_cage_0027.json  bookshelf_cage_0028.json  bookshelf_cage_0029.json  bookshelf_cage_0030.json  bookshelf_cage_0031.json  bookshelf_cage_0032.json  bookshelf_cage_0033.json  bookshelf_cage_0034.json  bookshelf_cage_0035.json  bookshelf_cage_0036.json  bookshelf_cage_0037.json  bookshelf_cage_0038.json  bookshelf_cage_0039.json  (+461 more)
data/table_new/: generator.json  table_new_0000.json  table_new_0001.json  table_new_0002.json  table_new_0003.json  table_new_0004.json  table_new_0005.json  table_new_0006.json  table_new_0007.json  table_new_0008.json  table_new_0009.json  (+490 more)
frankie_planner/: moveit_utils.py
scripts/: load_rmmi.py  rmmi_plots.py
