[project]
name = "frankie_planner"
version = "0.1.0"  # You can specify a version here
description = "Default moveit scripts to check the feasibility of our benchmarks"
dependencies = []  # Add dependencies if there are any

[build-system] # this is to fix issue with pixi pip install on editable mode
requires = ["hatchling"]
build-backend = "hatchling.build"
